add list applications endpoint and pagination abstraction
