# backend/src/applications/api_schema.py
@@ -4,6 +4,7 @@ from typing import Annotated
 from src.applications.models import ApplicationBase
 from src.common.utils import clean_url
 from src.jobs.api_schema import Job
+from src.common.api_schema import PaginatedResponse
 
 
 class CreateApplicationByJobUrl(BaseModel):
@@ -13,3 +14,8 @@ class CreateApplicationByJobUrl(BaseModel):
 class Application(ApplicationBase):
     id: int
     job: Job
+
+
+class ListApplicationsResponse(BaseModel):
+    applications: list[Application]
+    pagination: PaginatedResponse[Application]
